assets/css/main.css
/*In this section of the css file we define all classes we only want to write once (DRY)
The elements declared here are gener*/

/*SETS BOX SIZING TO BORDER BOX FOR ALL ELEMENTS*/
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/*FOR EASIER REM CALCULATIONS WE SET THE HTML FONT SIZE TO 10PX*/
html {
    scroll-behavior: smooth;
    font-size: 62.5%;
}

/*BODY STYLES*/
body {

    font-size: 1.6rem;
    margin: 0;
    /*removes all margin from the body*/
    padding: 0;
    /*removes all padding from the body*/
    overflow-x: hidden;
    /*disables horizontal scrolling - we need to hide stuff outside the viewport*/
    width: 100%;
    display: flex;
    flex-direction: column;
}

/*SECTION STYLES*/
/*this generates a full width and height section*/
.section-full {
    width: 100vw;
    min-height: 100vh;
}

/*this generates a full width and half height section*/
.section-half {
    width: 100vw;
    min-height: 50vh;
}

/*CONTAINER STYLES*/
.container {
    width: 62.5%;
    height: auto;
}

/*COLUMN STYLES*/

/*we can put columns into containers, this generates a column half the width of its parent*/
.column-2 {
    width: 50%;
}

/*we can put columns into containers, this generates a column quarter the width of its parent*/
.column-4 {
    height: auto;
    width: 25%;
}

/*GENERAL TEXT STYLES (HEADINGS, PARAGRAPHS AND SPANS)*/
h1 {
    font-family: montserrat, sans-serif;
    font-size: 5rem;
    font-weight: 400;
    margin: 0 0 0 -2px;
}

h2 {
    font-family: montserrat, sans-serif;
    font-size: 3.5rem;
    font-weight: 400;
    margin: 0;
}

h3 {
    font-family: montserrat, sans-serif;
    font-size: 2rem;
    margin: 0;
}

p {
    font-family: poppins, sans-serif;
    font-size: 1.6rem;
    font-weight: 400;
    margin: 0;
}

/*some text parts need to be very bold, so we set them here*/
span {
    font-weight: 800;
}

/*the default text color is black, but we also need some white text on the page*/
.text-white {
    color: white;
}

.text-shadow {
    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.25);
}

.text-center {
    text-align: center;
}

/*WE WANT DO ECIDE EASILY WHETHER TO USE FLEX OR GRID ON AN ELEMENT*/
.flex {
    display: flex;
}

.flex-center {
    justify-content: center;
    align-items: center;
}

.flex-center-x {
    justify-content: center;
}

.flex-center-y {
    align-items: center;
}

.flex-column {
    flex-direction: column;
}

.flex-row {
    flex-direction: row;
}

.grid {
    display: grid;
}

/*BOXES SOMETIMES NEED SOME SHADOW AND ROUND BORDERS TOO*/
.box-shadow {
    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.25);
}

.rounded {
    border-radius: 0.5rem;
}

/*BUTTONS CAN ALSO LOOK NICE*/
.button-wrapper {
    margin-top: 3rem;
}

.button {
    width: 14.5rem;
    height: 4rem;
    padding: 12px 16px;
    text-decoration: none;
    border: none;
    border-radius: 0.5rem;
    background-color: #9B00FF;
    color: white;
    font-family: montserrat, sans-serif;
    font-size: 1.6rem;
    font-weight: 600;
}

/*BACKGROUND GRADIENTS*/
.background {
    background: rgb(17, 0, 255);
    background: linear-gradient(43deg, rgba(17, 0, 255, 1) 0%, rgba(188, 0, 255, 1) 95%);
}

.background-reverse {
    background: rgb(188, 0, 255);
    background: linear-gradient(43deg, rgba(188, 0, 255, 1) 0%, rgba(17, 0, 255, 1) 95%);
}

.background-mask {
    background: rgb(255, 255, 255);
    background:
        linear-gradient(30deg, rgba(255, 255, 255, 1) 65%, rgba(17, 0, 255, 0) 65%),
        linear-gradient(43deg, rgba(17, 0, 255, 1) 0%, rgba(188, 0, 255, 1) 95%);
}

/*SOMETIMES WE NEED TO SPACE OR POSITION THINGS DIFFERENTLY*/
.divider-space {
    justify-content: space-between;
}

/*OR WE NEED TO FLIP STUFF AROUND*/
.flip-x {
    transform: scaleX(-1);
}

/*SHAPE DIVIDERS ARE A THING, SO WE NEED TO INTEGRATE THEM*/
.divider-bottom {
    margin-bottom: -2px;
}

/*IN THIS SECTION WE STYLE ELEMENTS WHICH NEED CUSTOM STYLING*/

/*Here we style the clickboxes with grid*/
.grid-container {
    place-items: end;
    width: 50%;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-column-gap: 35px;
    grid-row-gap: 35px;
}

.grid-card {
    text-align: center;
    padding: 2em;
    width: 210px;
    height: 210px;
}

.grid-card__background--basics {
    background-image: url("/assets/img/fab-forever-cards-basics.webp");
}

.grid-card__background--models {
    background-image: url("/assets/img/fab-forever-cards-models.webp");
}

.grid-card__background--help {
    background-image: url("/assets/img/fab-forever-cards-help.webp");
}

.grid-card__background--materials {
    background-image: url("/assets/img/fab-forever-cards-materials.webp");
}

/*Here we style the testimonial with flex*/
.testimonial-card {
    padding: 2rem;
    width: 75%;
}

.testimonial-card img {
    border: 1rem solid #9B00FF;
    border-radius: 50%;
}

.testimonial-card p {
    padding-left: 3em;
}

.testimonial-text {
    font-size: 1.8rem;
}

.contact .column-2 p {
    margin-top: 2rem;
}

/*Here we style the contact form with flex*/
label {
    vertical-align: top;
}

.form-wrapper {
    width: 76.2%;
    height: 150%;
    padding: 2em;
    background-color: white;
    border-radius: 1rem;
}

.form-wrapper h3 {
    margin-bottom: 3rem;
    width: 100%;
}

input[type=text],
input[type=email] {
    width: 100%;
    height: 4rem;
    padding-left: 2em;
    border-radius: 2rem;
    border: 1px solid rgb(150, 150, 150);
}

textarea {
    width: 100%;
    height: 25rem;
    padding-left: 2em;
    padding-top: 2em;
    border-radius: 2rem;
    border: 1px solid rgb(150, 150, 150);
    ;
}

/*FOOTER STYLINGS*/
footer {
    width: 100vw;
    height: 8vh;
}

.footer-logo {
    width: 20rem;
}

.social {
    margin-left: auto;
}

.social-icon {
    width: 2.5rem;
    height: 100%;
    margin-left: 2rem;
}

